--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-  <title>About Miles</title>
+  <title>About Me</title>
   <meta name="description" content="I'm in your class this year! Here's what I want you to know.">
   <meta name="author" content="">
   <meta name="keywords" content="">
@@ -15,7 +15,7 @@
   <meta property="og:url" content="">
   <meta property="og:description" content="">
 
-  <link rel="icon" href="icon.png">
+  <link rel="icon" href="miles.jpg">
 
   <link rel="stylesheet" href="css/normalize.css" type="text/css">
   <link rel="stylesheet" href="css/main.css" type="text/css">
